codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_login__tests__api_key_entry_empty_cursor.snap
---
source: tui/src/app_shell/startup_login_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
" Better Codex                                                          Startup                      "
"                                                                                                    "
"                                                                       mode api key                 "
" Sign in                                                                                            "
"                                                                                                    "
" Better Codex needs an authenticated OpenAI account for this provider                               "
"                                                                                                    "
" Paste your API key below. It is hidden while you type.                                             "
"                                                                                                    "
" > ▏                                                                                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" Enter save  Esc back  Paste insert key                                                             "
" The key is stored by the app-server auth layer.                                                    "
"                                                                                                    "
