codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_login__tests__api_key_entry_long_cursor.snap
---
source: tui/src/app_shell/startup_login_tests.rs
expression: narrow_terminal.backend().to_string()
---
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"  ╭──────────────────────────────────────────────╮  "
"  │◆ ACCOUNT LOGIN                               │  "
"  │Enter an OpenAI API key.                      │  "
"  │The key is hidden and will not be added to the│  "
"  │transcript.                                   │  "
"  │                                              │  "
"  │…******************************************▏  │  "
"  │                                              │  "
"  │Enter save   Esc back                         │  "
"  │                                              │  "
"  ╰──────────────────────────────────────────────╯  "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
"                                                    "
