codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_login__tests__login_onboarding_view_renders_device_code_phishing_warning.snap
---
source: tui/src/app_shell/startup_login_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
" Better Codex                                                          Startup                      "
"                                                                                                    "
"                                                                       mode device code             "
" Sign in                                                                                            "
"                                                                                                    "
" Better Codex needs an authenticated OpenAI account for this provider                               "
"                                                                                                    "
" Open this link in your browser and sign in:                                                        "
"                                                                                                    "
" https://auth.example.test/device                                                                   "
"                                                                                                    "
" Then enter this one-time code:                                                                     "
"                                                                                                    "
" ABCD-EFGH                                                                                          "
"                                                                                                    "
" Continue only if you started this login in Codex. If a website or                                  "
" another person gave you this code, cancel.                                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" Esc cancel and exit                                                                                "
" Waiting for app-server to report login completion.                                                 "
"                                                                                                    "
"                                                                                                    "
