codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_login__tests__login_onboarding_view_renders_native_auth_choices.snap
---
source: tui/src/app_shell/startup_login_tests.rs
expression: terminal.backend().to_string()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"              ╭──────────────────────────────────────────────────────────────────────╮              "
"              │◆ ACCOUNT LOGIN                                                       │              "
"              │Choose how to sign in.                                                │              "
"              │                                                                      │              "
"              │> 1. Sign in with ChatGPT                                             │              "
"              │    Get a one-time code and finish sign-in in your browser.           │              "
"              │  2. Use API key                                                      │              "
"              │    Paste an OpenAI API key and store it through app-server auth.     │              "
"              │  3. Exit                                                             │              "
"              │    Return to the terminal without starting a thread.                 │              "
"              │                                                                      │              "
"              │↑↓ navigate   Enter select   Esc exit                                 │              "
"              │                                                                      │              "
"              ╰──────────────────────────────────────────────────────────────────────╯              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
