codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__startup_login__tests__login_onboarding_view_uses_tokyo_night_styles.snap
---
source: tui/src/app_shell/startup_login_tests.rs
expression: "login_onboarding_style_grid(TuiAppTheme::TokyoNight)"
---
style grid 100x28:
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000011111111111111111111111111111111111111111111111111111111111111111111111100000000000000
0000000000000012233333333333334444444444444444444444444444444444444444444444444444444100000000000000
0000000000000014444444444444444444444444444444444444444444444444444444444444444444444100000000000000
0000000000000014444444444444444444444444444444444444444444444444444444444444444444444100000000000000
0000000000000011111133333333333333333333444444444444444444444444444444444444444444444100000000000000
0000000000000015555555555555555555555555555555555555555555555555555555555544444444444100000000000000
0000000000000011111133333333333444444444444444444444444444444444444444444444444444444100000000000000
0000000000000015555555555555555555555555555555555555555555555555555555555555555544444100000000000000
0000000000000011111133334444444444444444444444444444444444444444444444444444444444444100000000000000
0000000000000015555555555555555555555555555555555555555555555555555544444444444444444100000000000000
0000000000000014444444444444444444444444444444444444444444444444444444444444444444444100000000000000
0000000000000015555555555555555555555555555555555555444444444444444444444444444444444100000000000000
0000000000000014444444444444444444444444444444444444444444444444444444444444444444444100000000000000
0000000000000011111111111111111111111111111111111111111111111111111111111111111111111100000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
legend:
0 (1792 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
1 (183 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
2 (2 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
3 (48 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset).bold()
4 (561 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
5 (214 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset).dim()
